# oxide

./: AGENTS.md  Cargo.toml  LICENSE  README.md  RULE.md  build.rs
.github/workflows/: ci.yml
docs/: configuration.md  plan.md  self-update.md  slash-commands.md  spec.md
docs/specs/: spec-3-1-dnd-copy.md  spec-4-1-tab-refactor.md  spec-4-2-session-persistence.md  spec-4-4-tab-color-theme.md  spec-color-theme-sample.html  spec-crate-self-update.md  spec-file-meta-refresh.md  spec-self-update.md  spec-session-encryption.md  spec-shell-command-execution.md  spec-slash-commands.md  spec-user-notifications.md
src/: app.rs  cli.rs  config.rs  error.rs  main.rs  opener.rs  tabs.rs
src/core/: entries.rs  git.rs  metadata.rs  mod.rs  preview.rs  self_update.rs  session.rs  shell.rs  shell_worker.rs  slash_command.rs  theme.rs  user_notice.rs
src/self_update/: config.rs  download.rs  error.rs  http.rs  mod.rs  release.rs  replace.rs  service.rs  traits.rs
src/ui/: bottom_bar.rs  event.rs  layout.rs  main_pane.rs  metadata_worker.rs  mod.rs  preview_pane.rs  preview_worker.rs  shell_output_view.rs  theme.rs  top_bar.rs
