[package]
name = "oxide"
version = "0.4.1"
edition = "2024"
license = "MIT"

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
chrono = "0.4.43"
syntect = "5.3"
semver = "1"
ureq = { version = "2", features = ["native-tls"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "0.6"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
